--- a/1_image_classification/1-5_fine_tuning.ipynb
+++ b/1_image_classification/1-5_fine_tuning.ipynb
@@ -139,8 +139,9 @@
     "# 学習済みのVGG-16モデルをロード\n",
     "\n",
     "# VGG-16モデルのインスタンスを生成\n",
-    "use_pretrained = True  # 学習済みのパラメータを使用\n",
-    "net = models.vgg16(pretrained=use_pretrained)\n",
+    "#use_pretrained = True  # 学習済みのパラメータを使用\n",
+    "#net = models.vgg16(pretrained=use_pretrained)\n",
+    "net = models.vgg16(weights=models.VGG16_Weights.IMAGENET1K_V1)\n",
     "\n",
     "# VGG16の最後の出力層の出力ユニットをアリとハチの2つに付け替える\n",
     "net.classifier[6] = nn.Linear(in_features=4096, out_features=2)\n",
@@ -360,21 +361,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "使用デバイス： cuda:0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 0/5 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "使用デバイス： cuda:0\n",
       "Epoch 1/2\n",
       "-------------\n"
      ]
@@ -383,15 +370,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:20<00:00,  5.13s/it]\n",
-      "  0%|          | 0/8 [00:00<?, ?it/s]"
+      "100%|███████████████████████████████████████████████████████████████| 5/5 [00:12<00:00,  2.40s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "val Loss: 0.7704 Acc: 0.4444\n",
+      "val Loss: 0.7702 Acc: 0.4444\n",
       "Epoch 2/2\n",
       "-------------\n"
      ]
@@ -400,29 +386,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [00:25<00:00,  4.41s/it]\n",
-      "  0%|          | 0/5 [00:00<?, ?it/s]"
+      "100%|███████████████████████████████████████████████████████████████| 8/8 [03:59<00:00, 29.92s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train Loss: 0.5257 Acc: 0.7243\n"
+      "train Loss: 0.5129 Acc: 0.7160\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:02<00:00,  1.88it/s]"
+      "100%|███████████████████████████████████████████████████████████████| 5/5 [00:04<00:00,  1.05it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "val Loss: 0.1765 Acc: 0.9542\n"
+      "val Loss: 0.1745 Acc: 0.9608\n"
      ]
     },
     {
@@ -461,7 +446,28 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_328/2183270093.py:3: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  load_weights = torch.load(load_path)\n",
+      "/tmp/ipykernel_328/2183270093.py:7: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  load_weights = torch.load(load_path, map_location={'cuda:0': 'cpu'})\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# PyTorchのネットワークパラメータのロード\n",
     "load_path = './weights_fine_tuning.pth'\n",
@@ -483,7 +489,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -497,9 +503,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
