--- a/4_pose_estimation/4-5_TensorBoardX.ipynb
+++ b/4_pose_estimation/4-5_TensorBoardX.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,210 +59,210 @@
        "  (model0): OpenPose_Feature(\n",
        "    (model): Sequential(\n",
        "      (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (1): ReLU(inplace)\n",
+       "      (1): ReLU(inplace=True)\n",
        "      (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (3): ReLU(inplace)\n",
+       "      (3): ReLU(inplace=True)\n",
        "      (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
        "      (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (6): ReLU(inplace)\n",
+       "      (6): ReLU(inplace=True)\n",
        "      (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (8): ReLU(inplace)\n",
+       "      (8): ReLU(inplace=True)\n",
        "      (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
        "      (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (11): ReLU(inplace)\n",
+       "      (11): ReLU(inplace=True)\n",
        "      (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (13): ReLU(inplace)\n",
+       "      (13): ReLU(inplace=True)\n",
        "      (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (15): ReLU(inplace)\n",
+       "      (15): ReLU(inplace=True)\n",
        "      (16): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (17): ReLU(inplace)\n",
+       "      (17): ReLU(inplace=True)\n",
        "      (18): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
        "      (19): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (20): ReLU(inplace)\n",
+       "      (20): ReLU(inplace=True)\n",
        "      (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (22): ReLU(inplace)\n",
+       "      (22): ReLU(inplace=True)\n",
        "      (23): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (24): ReLU(inplace)\n",
+       "      (24): ReLU(inplace=True)\n",
        "      (25): Conv2d(256, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (26): ReLU(inplace)\n",
+       "      (26): ReLU(inplace=True)\n",
        "    )\n",
        "  )\n",
        "  (model1_1): Sequential(\n",
        "    (0): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (1): ReLU(inplace)\n",
+       "    (1): ReLU(inplace=True)\n",
        "    (2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (3): ReLU(inplace)\n",
+       "    (3): ReLU(inplace=True)\n",
        "    (4): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (5): ReLU(inplace)\n",
+       "    (5): ReLU(inplace=True)\n",
        "    (6): Conv2d(128, 512, kernel_size=(1, 1), stride=(1, 1))\n",
-       "    (7): ReLU(inplace)\n",
+       "    (7): ReLU(inplace=True)\n",
        "    (8): Conv2d(512, 38, kernel_size=(1, 1), stride=(1, 1))\n",
        "  )\n",
        "  (model2_1): Sequential(\n",
        "    (0): Conv2d(185, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (1): ReLU(inplace)\n",
+       "    (1): ReLU(inplace=True)\n",
        "    (2): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (3): ReLU(inplace)\n",
+       "    (3): ReLU(inplace=True)\n",
        "    (4): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (5): ReLU(inplace)\n",
+       "    (5): ReLU(inplace=True)\n",
        "    (6): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (7): ReLU(inplace)\n",
+       "    (7): ReLU(inplace=True)\n",
        "    (8): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (9): ReLU(inplace)\n",
+       "    (9): ReLU(inplace=True)\n",
        "    (10): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-       "    (11): ReLU(inplace)\n",
+       "    (11): ReLU(inplace=True)\n",
        "    (12): Conv2d(128, 38, kernel_size=(1, 1), stride=(1, 1))\n",
        "  )\n",
        "  (model3_1): Sequential(\n",
        "    (0): Conv2d(185, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (1): ReLU(inplace)\n",
+       "    (1): ReLU(inplace=True)\n",
        "    (2): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (3): ReLU(inplace)\n",
+       "    (3): ReLU(inplace=True)\n",
        "    (4): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (5): ReLU(inplace)\n",
+       "    (5): ReLU(inplace=True)\n",
        "    (6): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (7): ReLU(inplace)\n",
+       "    (7): ReLU(inplace=True)\n",
        "    (8): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (9): ReLU(inplace)\n",
+       "    (9): ReLU(inplace=True)\n",
        "    (10): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-       "    (11): ReLU(inplace)\n",
+       "    (11): ReLU(inplace=True)\n",
        "    (12): Conv2d(128, 38, kernel_size=(1, 1), stride=(1, 1))\n",
        "  )\n",
        "  (model4_1): Sequential(\n",
        "    (0): Conv2d(185, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (1): ReLU(inplace)\n",
+       "    (1): ReLU(inplace=True)\n",
        "    (2): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (3): ReLU(inplace)\n",
+       "    (3): ReLU(inplace=True)\n",
        "    (4): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (5): ReLU(inplace)\n",
+       "    (5): ReLU(inplace=True)\n",
        "    (6): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (7): ReLU(inplace)\n",
+       "    (7): ReLU(inplace=True)\n",
        "    (8): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (9): ReLU(inplace)\n",
+       "    (9): ReLU(inplace=True)\n",
        "    (10): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-       "    (11): ReLU(inplace)\n",
+       "    (11): ReLU(inplace=True)\n",
        "    (12): Conv2d(128, 38, kernel_size=(1, 1), stride=(1, 1))\n",
        "  )\n",
        "  (model5_1): Sequential(\n",
        "    (0): Conv2d(185, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (1): ReLU(inplace)\n",
+       "    (1): ReLU(inplace=True)\n",
        "    (2): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (3): ReLU(inplace)\n",
+       "    (3): ReLU(inplace=True)\n",
        "    (4): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (5): ReLU(inplace)\n",
+       "    (5): ReLU(inplace=True)\n",
        "    (6): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (7): ReLU(inplace)\n",
+       "    (7): ReLU(inplace=True)\n",
        "    (8): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (9): ReLU(inplace)\n",
+       "    (9): ReLU(inplace=True)\n",
        "    (10): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-       "    (11): ReLU(inplace)\n",
+       "    (11): ReLU(inplace=True)\n",
        "    (12): Conv2d(128, 38, kernel_size=(1, 1), stride=(1, 1))\n",
        "  )\n",
        "  (model6_1): Sequential(\n",
        "    (0): Conv2d(185, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (1): ReLU(inplace)\n",
+       "    (1): ReLU(inplace=True)\n",
        "    (2): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (3): ReLU(inplace)\n",
+       "    (3): ReLU(inplace=True)\n",
        "    (4): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (5): ReLU(inplace)\n",
+       "    (5): ReLU(inplace=True)\n",
        "    (6): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (7): ReLU(inplace)\n",
+       "    (7): ReLU(inplace=True)\n",
        "    (8): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (9): ReLU(inplace)\n",
+       "    (9): ReLU(inplace=True)\n",
        "    (10): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-       "    (11): ReLU(inplace)\n",
+       "    (11): ReLU(inplace=True)\n",
        "    (12): Conv2d(128, 38, kernel_size=(1, 1), stride=(1, 1))\n",
        "  )\n",
        "  (model1_2): Sequential(\n",
        "    (0): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (1): ReLU(inplace)\n",
+       "    (1): ReLU(inplace=True)\n",
        "    (2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (3): ReLU(inplace)\n",
+       "    (3): ReLU(inplace=True)\n",
        "    (4): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (5): ReLU(inplace)\n",
+       "    (5): ReLU(inplace=True)\n",
        "    (6): Conv2d(128, 512, kernel_size=(1, 1), stride=(1, 1))\n",
-       "    (7): ReLU(inplace)\n",
+       "    (7): ReLU(inplace=True)\n",
        "    (8): Conv2d(512, 19, kernel_size=(1, 1), stride=(1, 1))\n",
        "  )\n",
        "  (model2_2): Sequential(\n",
        "    (0): Conv2d(185, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (1): ReLU(inplace)\n",
+       "    (1): ReLU(inplace=True)\n",
        "    (2): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (3): ReLU(inplace)\n",
+       "    (3): ReLU(inplace=True)\n",
        "    (4): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (5): ReLU(inplace)\n",
+       "    (5): ReLU(inplace=True)\n",
        "    (6): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (7): ReLU(inplace)\n",
+       "    (7): ReLU(inplace=True)\n",
        "    (8): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (9): ReLU(inplace)\n",
+       "    (9): ReLU(inplace=True)\n",
        "    (10): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-       "    (11): ReLU(inplace)\n",
+       "    (11): ReLU(inplace=True)\n",
        "    (12): Conv2d(128, 19, kernel_size=(1, 1), stride=(1, 1))\n",
        "  )\n",
        "  (model3_2): Sequential(\n",
        "    (0): Conv2d(185, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (1): ReLU(inplace)\n",
+       "    (1): ReLU(inplace=True)\n",
        "    (2): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (3): ReLU(inplace)\n",
+       "    (3): ReLU(inplace=True)\n",
        "    (4): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (5): ReLU(inplace)\n",
+       "    (5): ReLU(inplace=True)\n",
        "    (6): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (7): ReLU(inplace)\n",
+       "    (7): ReLU(inplace=True)\n",
        "    (8): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (9): ReLU(inplace)\n",
+       "    (9): ReLU(inplace=True)\n",
        "    (10): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-       "    (11): ReLU(inplace)\n",
+       "    (11): ReLU(inplace=True)\n",
        "    (12): Conv2d(128, 19, kernel_size=(1, 1), stride=(1, 1))\n",
        "  )\n",
        "  (model4_2): Sequential(\n",
        "    (0): Conv2d(185, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (1): ReLU(inplace)\n",
+       "    (1): ReLU(inplace=True)\n",
        "    (2): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (3): ReLU(inplace)\n",
+       "    (3): ReLU(inplace=True)\n",
        "    (4): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (5): ReLU(inplace)\n",
+       "    (5): ReLU(inplace=True)\n",
        "    (6): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (7): ReLU(inplace)\n",
+       "    (7): ReLU(inplace=True)\n",
        "    (8): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (9): ReLU(inplace)\n",
+       "    (9): ReLU(inplace=True)\n",
        "    (10): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-       "    (11): ReLU(inplace)\n",
+       "    (11): ReLU(inplace=True)\n",
        "    (12): Conv2d(128, 19, kernel_size=(1, 1), stride=(1, 1))\n",
        "  )\n",
        "  (model5_2): Sequential(\n",
        "    (0): Conv2d(185, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (1): ReLU(inplace)\n",
+       "    (1): ReLU(inplace=True)\n",
        "    (2): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (3): ReLU(inplace)\n",
+       "    (3): ReLU(inplace=True)\n",
        "    (4): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (5): ReLU(inplace)\n",
+       "    (5): ReLU(inplace=True)\n",
        "    (6): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (7): ReLU(inplace)\n",
+       "    (7): ReLU(inplace=True)\n",
        "    (8): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (9): ReLU(inplace)\n",
+       "    (9): ReLU(inplace=True)\n",
        "    (10): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-       "    (11): ReLU(inplace)\n",
+       "    (11): ReLU(inplace=True)\n",
        "    (12): Conv2d(128, 19, kernel_size=(1, 1), stride=(1, 1))\n",
        "  )\n",
        "  (model6_2): Sequential(\n",
        "    (0): Conv2d(185, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (1): ReLU(inplace)\n",
+       "    (1): ReLU(inplace=True)\n",
        "    (2): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (3): ReLU(inplace)\n",
+       "    (3): ReLU(inplace=True)\n",
        "    (4): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (5): ReLU(inplace)\n",
+       "    (5): ReLU(inplace=True)\n",
        "    (6): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (7): ReLU(inplace)\n",
+       "    (7): ReLU(inplace=True)\n",
        "    (8): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
-       "    (9): ReLU(inplace)\n",
+       "    (9): ReLU(inplace=True)\n",
        "    (10): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-       "    (11): ReLU(inplace)\n",
+       "    (11): ReLU(inplace=True)\n",
        "    (12): Conv2d(128, 19, kernel_size=(1, 1), stride=(1, 1))\n",
        "  )\n",
        ")"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,9 +276,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-10-03 22:04:24.277245: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-10-03 22:04:24.385459: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-10-03 22:04:24.418171: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-10-03 22:04:24.639415: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-10-03 22:04:26.332006: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "/opt/conda/lib/python3.10/site-packages/torch/jit/_trace.py:1065: TracerWarning: Encountering a list at the output of the tracer might cause the trace to be incorrect, this is only valid if the container structure does not change based on the module's inputs. Consider using a constant container instead (e.g. for `list`, use a `tuple` instead. for `dict`, use a `NamedTuple` instead). If you absolutely need this and know the side effects, pass strict=False to trace() to allow this behavior.\n",
+      "  module._c._create_method_from_trace(\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. tensorboardXの保存クラスを呼び出します\n",
     "from tensorboardX import SummaryWriter\n",
@@ -314,11 +329,63 @@
    "source": [
     "以上"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-b0f041c3c12ef734\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-b0f041c3c12ef734\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir tbX --bind_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -332,9 +399,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
