T:動作するように修正

--- a/7_nlp_sentiment_transformer/7-2_torchtext.ipynb
+++ b/7_nlp_sentiment_transformer/7-2_torchtext.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -137,12 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torchtext\n",
-    "\n",
     "# tsvやcsvデータを読み込んだときに、読み込んだ内容に対して行う処理を定義します\n",
     "# 文章とラベルの両方に用意します\n",
     "\n",
@@ -163,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -203,65 +202,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'王': 1,\n",
-       "         'と': 5,\n",
+       "Counter({'と': 5,\n",
+       "         '。': 4,\n",
+       "         'の': 4,\n",
+       "         '文章': 4,\n",
+       "         'な': 4,\n",
+       "         'が': 3,\n",
+       "         '、': 3,\n",
+       "         'を': 3,\n",
+       "         'し': 3,\n",
+       "         '本章': 2,\n",
+       "         'ます': 2,\n",
+       "         '評価': 2,\n",
+       "         'て': 2,\n",
+       "         'いる': 2,\n",
+       "         'か': 2,\n",
+       "         '分類': 2,\n",
+       "         '王': 1,\n",
        "         '王子': 1,\n",
        "         '女王': 1,\n",
        "         '姫': 1,\n",
        "         '男性': 1,\n",
        "         '女性': 1,\n",
-       "         'が': 3,\n",
        "         'い': 1,\n",
        "         'まし': 1,\n",
        "         'た': 1,\n",
-       "         '。': 4,\n",
        "         '機械': 1,\n",
        "         '学習': 1,\n",
        "         '好き': 1,\n",
        "         'です': 1,\n",
-       "         '本章': 2,\n",
        "         'から': 1,\n",
        "         '自然': 1,\n",
        "         '言語': 1,\n",
        "         '処理': 1,\n",
        "         'に': 1,\n",
        "         '取り組み': 1,\n",
-       "         'ます': 2,\n",
        "         'で': 1,\n",
        "         'は': 1,\n",
        "         '商品': 1,\n",
        "         'レビュー': 1,\n",
-       "         'の': 4,\n",
        "         '短い': 1,\n",
-       "         '文章': 4,\n",
        "         'に対して': 1,\n",
-       "         '、': 3,\n",
        "         'その': 1,\n",
        "         'ネガティブ': 1,\n",
-       "         'な': 4,\n",
-       "         '評価': 2,\n",
-       "         'を': 3,\n",
-       "         'し': 3,\n",
-       "         'て': 2,\n",
-       "         'いる': 2,\n",
-       "         'か': 2,\n",
        "         'ポジティブ': 1,\n",
        "         '0': 1,\n",
        "         '値': 1,\n",
        "         'クラス': 1,\n",
-       "         '分類': 2,\n",
        "         'する': 1,\n",
        "         'モデル': 1,\n",
        "         '構築': 1})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,13 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "defaultdict(<function torchtext.vocab._default_unk_index()>,\n",
+       "defaultdict(<bound method Vocab._default_unk_index of <torchtext.vocab.Vocab object at 0x7f96ba2d7790>>,\n",
        "            {'<unk>': 0,\n",
        "             '<pad>': 1,\n",
        "             'と': 2,\n",
@@ -338,7 +337,7 @@
        "             '言語': 51})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +400,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -415,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
