--- a/7_nlp_sentiment_transformer/7-7_transformer_training_inference.ipynb
+++ b/7_nlp_sentiment_transformer/7-7_transformer_training_inference.ipynb
@@ -32,7 +32,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# パッケージのimport\n",
     "import numpy as np\n",
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +101,18 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/torch/cuda/__init__.py:146: UserWarning: \n",
+      "NVIDIA GeForce RTX 4060 with CUDA capability sm_89 is not compatible with the current PyTorch installation.\n",
+      "The current PyTorch install supports CUDA capabilities sm_37 sm_50 sm_60 sm_70.\n",
+      "If you want to use the NVIDIA GeForce RTX 4060 GPU with PyTorch, please check the instructions at https://pytorch.org/get-started/locally/\n",
+      "\n",
+      "  warnings.warn(incompatible_device_warn.format(device_name, capability, \" \".join(arch_list), device_name))\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -247,27 +268,19 @@
      "output_type": "stream",
      "text": [
       "使用デバイス： cuda:0\n",
-      "-----start-------\n",
-      "Epoch 1/10 | train |  Loss: 0.6039 Acc: 0.6629\n",
-      "Epoch 1/10 |  val  |  Loss: 0.4203 Acc: 0.8174\n",
-      "Epoch 2/10 | train |  Loss: 0.4382 Acc: 0.8025\n",
-      "Epoch 2/10 |  val  |  Loss: 0.3872 Acc: 0.8332\n",
-      "Epoch 3/10 | train |  Loss: 0.4130 Acc: 0.8161\n",
-      "Epoch 3/10 |  val  |  Loss: 0.3688 Acc: 0.8456\n",
-      "Epoch 4/10 | train |  Loss: 0.3862 Acc: 0.8292\n",
-      "Epoch 4/10 |  val  |  Loss: 0.3789 Acc: 0.8432\n",
-      "Epoch 5/10 | train |  Loss: 0.3718 Acc: 0.8356\n",
-      "Epoch 5/10 |  val  |  Loss: 0.3477 Acc: 0.8552\n",
-      "Epoch 6/10 | train |  Loss: 0.3601 Acc: 0.8397\n",
-      "Epoch 6/10 |  val  |  Loss: 0.3401 Acc: 0.8570\n",
-      "Epoch 7/10 | train |  Loss: 0.3515 Acc: 0.8480\n",
-      "Epoch 7/10 |  val  |  Loss: 0.3452 Acc: 0.8558\n",
-      "Epoch 8/10 | train |  Loss: 0.3435 Acc: 0.8513\n",
-      "Epoch 8/10 |  val  |  Loss: 0.3523 Acc: 0.8560\n",
-      "Epoch 9/10 | train |  Loss: 0.3409 Acc: 0.8525\n",
-      "Epoch 9/10 |  val  |  Loss: 0.3300 Acc: 0.8598\n",
-      "Epoch 10/10 | train |  Loss: 0.3312 Acc: 0.8573\n",
-      "Epoch 10/10 |  val  |  Loss: 0.3354 Acc: 0.8598\n"
+      "-----start-------\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "CUDA error: no kernel image is available for execution on the device\nCUDA kernel errors might be asynchronously reported at some other API call,so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# 学習・検証を実行する 15分ほどかかります\u001b[39;00m\n\u001b[1;32m      2\u001b[0m num_epochs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[0;32m----> 3\u001b[0m net_trained \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnet\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataloaders_dict\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m                          \u001b[49m\u001b[43mcriterion\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_epochs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[6], line 44\u001b[0m, in \u001b[0;36mtrain_model\u001b[0;34m(net, dataloaders_dict, criterion, optimizer, num_epochs)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mset_grad_enabled(phase \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m     41\u001b[0m \n\u001b[1;32m     42\u001b[0m     \u001b[38;5;66;03m# mask作成\u001b[39;00m\n\u001b[1;32m     43\u001b[0m     input_pad \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m  \u001b[38;5;66;03m# 単語のIDにおいて、'<pad>': 1 なので\u001b[39;00m\n\u001b[0;32m---> 44\u001b[0m     input_mask \u001b[38;5;241m=\u001b[39m (\u001b[43minputs\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m!=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43minput_pad\u001b[49m)\n\u001b[1;32m     46\u001b[0m     \u001b[38;5;66;03m# Transformerに入力\u001b[39;00m\n\u001b[1;32m     47\u001b[0m     outputs, _, _ \u001b[38;5;241m=\u001b[39m net(inputs, input_mask)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: CUDA error: no kernel image is available for execution on the device\nCUDA kernel errors might be asynchronously reported at some other API call,so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1."
      ]
     }
    ],
@@ -488,7 +501,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -502,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
