--- a/7_nlp_sentiment_transformer/7-1_Tokenizer.ipynb
+++ b/7_nlp_sentiment_transformer/7-1_Tokenizer.ipynb
@@ -70,7 +70,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: janome in /opt/conda/lib/python3.10/site-packages (0.5.0)\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install janome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -131,6 +150,61 @@
     "公式サイト\n",
     "\n",
     "http://taku910.github.io/mecab/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hit:1 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
+      "Hit:2 http://archive.ubuntu.com/ubuntu jammy InRelease                         \n",
+      "Hit:3 http://security.ubuntu.com/ubuntu jammy-security InRelease               \n",
+      "Get:4 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [128 kB]\n",
+      "Hit:5 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+      "Fetched 128 kB in 2s (69.8 kB/s)\n",
+      "Reading package lists... Done\n",
+      "Reading package lists... Done\n",
+      "Building dependency tree... Done\n",
+      "Reading state information... Done\n",
+      "swig is already the newest version (4.0.2-1ubuntu1).\n",
+      "curl is already the newest version (7.81.0-1ubuntu1.18).\n",
+      "file is already the newest version (1:5.41-3ubuntu0.1).\n",
+      "git is already the newest version (1:2.34.1-1ubuntu1.11).\n",
+      "sudo is already the newest version (1.9.9-1ubuntu2.4).\n",
+      "vim is already the newest version (2:8.2.3995-1ubuntu2.19).\n",
+      "0 upgraded, 0 newly installed, 0 to remove and 62 not upgraded.\n",
+      "Reading package lists... Done\n",
+      "Building dependency tree... Done\n",
+      "Reading state information... Done\n",
+      "mecab is already the newest version (0.996-14build9).\n",
+      "0 upgraded, 0 newly installed, 0 to remove and 62 not upgraded.\n",
+      "Reading package lists... Done\n",
+      "Building dependency tree... Done\n",
+      "Reading state information... Done\n",
+      "libmecab-dev is already the newest version (0.996-14build9).\n",
+      "0 upgraded, 0 newly installed, 0 to remove and 62 not upgraded.\n",
+      "Reading package lists... Done\n",
+      "Building dependency tree... Done\n",
+      "Reading state information... Done\n",
+      "mecab-ipadic-utf8 is already the newest version (2.7.0-20070801+main-3).\n",
+      "0 upgraded, 0 newly installed, 0 to remove and 62 not upgraded.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!apt-get update\n",
+    "!sudo apt-get -y install sudo vim git curl file swig\n",
+    "\n",
+    "!sudo apt-get -y install mecab\n",
+    "\n",
+    "!sudo apt-get -y install libmecab-dev\n",
+    "\n",
+    "!sudo apt-get -y install mecab-ipadic-utf8"
    ]
   },
   {
@@ -173,7 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp /etc/mecabrc /usr/local/etc/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -195,6 +278,8 @@
     "import MeCab\n",
     "\n",
     "m_t = MeCab.Tagger('-Ochasen')\n",
+    "#m_t = MeCab.Tagger(r'-r /etc/mecabrc -d /usr/share/mecab/dic/mecab-ipadic-neologd')\n",
+    "\n",
     "\n",
     "text = '機械学習が好きです。'\n",
     "\n",
@@ -203,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +308,8 @@
    "source": [
     "import MeCab\n",
     "\n",
-    "m_t = MeCab.Tagger('-Ochasen -d /usr/lib/mecab/dic/mecab-ipadic-neologd')\n",
+    "#m_t = MeCab.Tagger('-Ochasen -d /usr/lib/mecab/dic/mecab-ipadic-neologd')\n",
+    "m_t = MeCab.Tagger('-Ochasen -d /usr/lib/x86_64-linux-gnu/mecab/dic/mecab-ipadic-neologd')\n",
     "\n",
     "text = '機械学習が好きです。'\n",
     "\n",
@@ -232,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +332,7 @@
    "source": [
     "# 単語分割する関数を定義\n",
     "\n",
-    "m_t = MeCab.Tagger('-Owakati -d /usr/lib/mecab/dic/mecab-ipadic-neologd')\n",
+    "m_t = MeCab.Tagger('-Owakati -d /usr/lib/x86_64-linux-gnu/mecab/dic/mecab-ipadic-neologd')\n",
     "\n",
     "\n",
     "def tokenizer_mecab(text):\n",
@@ -269,7 +355,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -283,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
