--- a/7_nlp_sentiment_transformer/7-6_Transformer.ipynb
+++ b/7_nlp_sentiment_transformer/7-6_Transformer.ipynb
@@ -1,36 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.7"
-    },
-    "colab": {
-      "name": "7-6_Transformer.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "D1PpwmcMJFRB",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "D1PpwmcMJFRB"
       },
       "source": [
         "# 7.6  Transformerモデル（分類タスク用）の実装\n",
@@ -42,8 +16,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0aSx2BwBJFRC",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "0aSx2BwBJFRC"
       },
       "source": [
         "※　本章のファイルはすべてUbuntuでの動作を前提としています。Windowsなど文字コードが違う環境での動作にはご注意下さい。"
@@ -52,8 +26,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VD2JfFFgJFRD",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "VD2JfFFgJFRD"
       },
       "source": [
         "# 7.6 学習目標\n",
@@ -67,8 +41,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3IBOjXDeJFRE",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "3IBOjXDeJFRE"
       },
       "source": [
         "# 事前準備\n",
@@ -77,11 +51,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
       "metadata": {
-        "id": "w1kMABqAJFRF",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "w1kMABqAJFRF"
       },
+      "outputs": [],
       "source": [
         "import math\n",
         "import numpy as np\n",
@@ -91,33 +67,33 @@
         "import torch.nn as nn\n",
         "import torch.nn.functional as F \n",
         "import torchtext"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
       "metadata": {
-        "id": "U2wc_IbWJFRI",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "U2wc_IbWJFRI"
       },
+      "outputs": [],
       "source": [
         "# Setup seeds\n",
         "torch.manual_seed(1234)\n",
         "np.random.seed(1234)\n",
         "random.seed(1234)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
       "metadata": {
-        "id": "iAB9spQJJFRM",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "iAB9spQJJFRM"
       },
+      "outputs": [],
       "source": [
         "class Embedder(nn.Module):\n",
         "    '''idで示されている単語をベクトルに変換します'''\n",
@@ -133,18 +109,27 @@
         "        x_vec = self.embeddings(x)\n",
         "\n",
         "        return x_vec\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 18,
       "metadata": {
-        "id": "loHdRkRaJFRQ",
-        "colab_type": "code",
         "colab": {},
+        "colab_type": "code",
+        "id": "loHdRkRaJFRQ",
         "outputId": "c584d9db-3cfe-4ea3-b1cf-6f5cf1c684fa"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "入力のテンソルサイズ： torch.Size([24, 256])\n",
+            "出力のテンソルサイズ： torch.Size([24, 256, 300])\n"
+          ]
+        }
+      ],
       "source": [
         "# 動作確認\n",
         "\n",
@@ -165,26 +150,17 @@
         "\n",
         "print(\"入力のテンソルサイズ：\", x.shape)\n",
         "print(\"出力のテンソルサイズ：\", x1.shape)\n"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "入力のテンソルサイズ： torch.Size([24, 256])\n",
-            "出力のテンソルサイズ： torch.Size([24, 256, 300])\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
-        "id": "S-R3xrLWJFRU",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "S-R3xrLWJFRU"
       },
+      "outputs": [],
       "source": [
         "class PositionalEncoder(nn.Module):\n",
         "    '''入力された単語の位置を示すベクトル情報を付加する'''\n",
@@ -223,18 +199,27 @@
         "        # xがpeよりも小さいので、大きくする\n",
         "        ret = math.sqrt(self.d_model)*x + self.pe\n",
         "        return ret\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
-        "id": "SZoqYmiiJFRX",
-        "colab_type": "code",
         "colab": {},
+        "colab_type": "code",
+        "id": "SZoqYmiiJFRX",
         "outputId": "6f3815a2-2a4a-4bf6-bad9-0ccc6fe69821"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "入力のテンソルサイズ： torch.Size([24, 256, 300])\n",
+            "出力のテンソルサイズ： torch.Size([24, 256, 300])\n"
+          ]
+        }
+      ],
       "source": [
         "# 動作確認\n",
         "\n",
@@ -249,26 +234,17 @@
         "\n",
         "print(\"入力のテンソルサイズ：\", x1.shape)\n",
         "print(\"出力のテンソルサイズ：\", x2.shape)\n"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "入力のテンソルサイズ： torch.Size([24, 256, 300])\n",
-            "出力のテンソルサイズ： torch.Size([24, 256, 300])\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
-        "id": "i8wcSoeDJFRa",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "i8wcSoeDJFRa"
       },
+      "outputs": [],
       "source": [
         "class Attention(nn.Module):\n",
         "    '''Transformerは本当はマルチヘッドAttentionですが、\n",
@@ -312,17 +288,17 @@
         "        output = self.out(output)\n",
         "\n",
         "        return output, normlized_weights\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
-        "id": "e1AcDAfjJFRe",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "e1AcDAfjJFRe"
       },
+      "outputs": [],
       "source": [
         "class FeedForward(nn.Module):\n",
         "    def __init__(self, d_model, d_ff=1024, dropout=0.1):\n",
@@ -338,17 +314,17 @@
         "        x = self.dropout(F.relu(x))\n",
         "        x = self.linear_2(x)\n",
         "        return x\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
-        "id": "JQ5Y2sDDJFRh",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "JQ5Y2sDDJFRh"
       },
+      "outputs": [],
       "source": [
         "class TransformerBlock(nn.Module):\n",
         "    def __init__(self, d_model, dropout=0.1):\n",
@@ -382,18 +358,54 @@
         "        output = x2 + self.dropout_2(self.ff(x_normlized2))\n",
         "\n",
         "        return output, normlized_weights\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
       "metadata": {
-        "id": "KNaVWuNJJFRk",
-        "colab_type": "code",
         "colab": {},
+        "colab_type": "code",
+        "id": "KNaVWuNJJFRk",
         "outputId": "e20710fc-c547-48e0-831d-3aef9d53c367"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor([ True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+            "         True,  True, False, False, False, False, False, False, False, False,\n",
+            "        False, False, False, False, False, False, False, False, False, False,\n",
+            "        False, False, False, False, False, False, False, False, False, False,\n",
+            "        False, False, False, False, False, False, False, False, False, False,\n",
+            "        False, False, False, False, False, False, False, False, False, False,\n",
+            "        False, False, False, False, False, False, False, False, False, False,\n",
+            "        False, False, False, False, False, False, False, False, False, False,\n",
+            "        False, False, False, False, False, False, False, False, False, False,\n",
+            "        False, False, False, False, False, False, False, False, False, False,\n",
+            "        False, False, False, False, False, False, False, False, False, False,\n",
+            "        False, False, False, False, False, False])\n",
+            "入力のテンソルサイズ： torch.Size([24, 256, 300])\n",
+            "出力のテンソルサイズ： torch.Size([24, 256, 300])\n",
+            "Attentionのサイズ： torch.Size([24, 256, 256])\n"
+          ]
+        }
+      ],
       "source": [
         "# 動作確認\n",
         "\n",
@@ -416,38 +428,17 @@
         "print(\"入力のテンソルサイズ：\", x2.shape)\n",
         "print(\"出力のテンソルサイズ：\", x3.shape)\n",
         "print(\"Attentionのサイズ：\", normlized_weights.shape)\n"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-            "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-            "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-            "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], dtype=torch.uint8)\n",
-            "入力のテンソルサイズ： torch.Size([24, 256, 300])\n",
-            "出力のテンソルサイズ： torch.Size([24, 256, 300])\n",
-            "Attentionのサイズ： torch.Size([24, 256, 256])\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
-        "id": "pcrNM1rpJFRn",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "pcrNM1rpJFRn"
       },
+      "outputs": [],
       "source": [
         "class ClassificationHead(nn.Module):\n",
         "    '''Transformer_Blockの出力を使用し、最後にクラス分類させる'''\n",
@@ -467,18 +458,27 @@
         "        out = self.linear(x0)\n",
         "\n",
         "        return out\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
       "metadata": {
-        "id": "WUVS-wxoJFRq",
-        "colab_type": "code",
         "colab": {},
+        "colab_type": "code",
+        "id": "WUVS-wxoJFRq",
         "outputId": "e52ae2a8-1e44-45ef-d00e-0ae01b4f1ad5"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "入力のテンソルサイズ： torch.Size([24, 256, 300])\n",
+            "出力のテンソルサイズ： torch.Size([24, 2])\n"
+          ]
+        }
+      ],
       "source": [
         "# 動作確認\n",
         "\n",
@@ -500,26 +500,17 @@
         "\n",
         "print(\"入力のテンソルサイズ：\", x3.shape)\n",
         "print(\"出力のテンソルサイズ：\", x4.shape)\n"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "入力のテンソルサイズ： torch.Size([24, 256, 300])\n",
-            "出力のテンソルサイズ： torch.Size([24, 2])\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
       "metadata": {
-        "id": "k8-NHGc3JFRt",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "k8-NHGc3JFRt"
       },
+      "outputs": [],
       "source": [
         "# 最終的なTransformerモデルのクラス\n",
         "\n",
@@ -546,18 +537,50 @@
         "            x3_1, mask)  # Self-Attentionで特徴量を変換\n",
         "        x4 = self.net4(x3_2)  # 最終出力の0単語目を使用して、分類0-1のスカラーを出力\n",
         "        return x4, normlized_weights_1, normlized_weights_2\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
       "metadata": {
-        "id": "g2dt7_rvJFRv",
-        "colab_type": "code",
         "colab": {},
+        "colab_type": "code",
+        "id": "g2dt7_rvJFRv",
         "outputId": "9b5659f4-2d7c-4a7d-e3ae-f2c1b0703750"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "出力のテンソルサイズ： torch.Size([24, 2])\n",
+            "出力テンソルのsigmoid： tensor([[0.6878, 0.3122],\n",
+            "        [0.7308, 0.2692],\n",
+            "        [0.7246, 0.2754],\n",
+            "        [0.7039, 0.2961],\n",
+            "        [0.7014, 0.2986],\n",
+            "        [0.6962, 0.3038],\n",
+            "        [0.6782, 0.3218],\n",
+            "        [0.6545, 0.3455],\n",
+            "        [0.7099, 0.2901],\n",
+            "        [0.7073, 0.2927],\n",
+            "        [0.7210, 0.2790],\n",
+            "        [0.7087, 0.2913],\n",
+            "        [0.6805, 0.3195],\n",
+            "        [0.7182, 0.2818],\n",
+            "        [0.7253, 0.2747],\n",
+            "        [0.6915, 0.3085],\n",
+            "        [0.7135, 0.2865],\n",
+            "        [0.6992, 0.3008],\n",
+            "        [0.6912, 0.3088],\n",
+            "        [0.7113, 0.2887],\n",
+            "        [0.7195, 0.2805],\n",
+            "        [0.7277, 0.2723],\n",
+            "        [0.6649, 0.3351],\n",
+            "        [0.7168, 0.2832]], grad_fn=<SoftmaxBackward0>)\n"
+          ]
+        }
+      ],
       "source": [
         "# 動作確認\n",
         "\n",
@@ -575,47 +598,13 @@
         "\n",
         "print(\"出力のテンソルサイズ：\", out.shape)\n",
         "print(\"出力テンソルのsigmoid：\", F.softmax(out, dim=1))\n"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "出力のテンソルサイズ： torch.Size([24, 2])\n",
-            "出力テンソルのsigmoid： tensor([[0.6980, 0.3020],\n",
-            "        [0.7318, 0.2682],\n",
-            "        [0.7244, 0.2756],\n",
-            "        [0.7135, 0.2865],\n",
-            "        [0.7022, 0.2978],\n",
-            "        [0.6974, 0.3026],\n",
-            "        [0.6831, 0.3169],\n",
-            "        [0.6487, 0.3513],\n",
-            "        [0.7096, 0.2904],\n",
-            "        [0.7221, 0.2779],\n",
-            "        [0.7213, 0.2787],\n",
-            "        [0.7046, 0.2954],\n",
-            "        [0.6738, 0.3262],\n",
-            "        [0.7069, 0.2931],\n",
-            "        [0.7217, 0.2783],\n",
-            "        [0.6837, 0.3163],\n",
-            "        [0.7011, 0.2989],\n",
-            "        [0.6944, 0.3056],\n",
-            "        [0.6860, 0.3140],\n",
-            "        [0.7183, 0.2817],\n",
-            "        [0.7256, 0.2744],\n",
-            "        [0.7288, 0.2712],\n",
-            "        [0.6678, 0.3322],\n",
-            "        [0.7253, 0.2747]], grad_fn=<SoftmaxBackward>)\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MSSYMFxdJFRx",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "MSSYMFxdJFRx"
       },
       "source": [
         "ここまでの内容をフォルダ「utils」のtransformer.pyに別途保存しておき、次節からはこちらから読み込むようにします"
@@ -624,12 +613,38 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GLLg9VGIJFRx",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "GLLg9VGIJFRx"
       },
       "source": [
         "以上"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "7-6_Transformer.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "base",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.14"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
